src/ASintactico/y.output
   0  $accept : programa $end

   1  programa : BEGIN lista_declaraciones_prog END

   2  lista_declaraciones_prog : lista_declaraciones
   3                           | lista_sent_declar lista_declaraciones

   4  lista_declaraciones : declaracion
   5                      | declaracion lista_declaraciones

   6  declaracion : sentencia_declar_funcion
   7              | bloque_sent

   8  sentencia_declar_funcion : FUNCTION ID '(' parametros ')' bloque_funcion
   9                           | FUNCTION ID '(' ')' bloque_funcion
  10                           | FUNCTION error ')'
  11                           | FUNCTION error bloque_funcion

  12  bloque_sent : sentencia_ejec
  13              | bloque_funcion

  14  bloque_funcion : BEGIN lista_sentencias END

  15  $$1 :

  16  bloque_funcion : BEGIN lista_sentencias $$1 bloque_funcion

  17  $$2 :

  18  bloque_funcion : BEGIN lista_sentencias $$2 sentencia_declar_funcion

  19  lista_sentencias : lista_sent_ejec
  20                   | lista_sent_declar lista_sent_ejec

  21  lista_sent_declar : sentencia_declarativa_tipo lista_sent_declar
  22                    | sentencia_declarativa_tipo

  23  sentencia_declarativa_tipo : tipo lista_var ';'
  24                             | tipo error ';'

  25  $$3 :

  26  sentencia_declarativa_tipo : tipo lista_var $$3 sent_correcta

  27  $$4 :

  28  sentencia_declarativa_tipo : tipo lista_var $$4 sentencia_declarativa_tipo

  29  lista_sent_ejec : sentencia_ejec lista_sent_ejec
  30                  | sentencia_ejec

  31  sentencia_ejec : sentencia_simple
  32                 | sentencia_comp

  33  sentencia_simple : sent_correcta

  34  $$5 :

  35  sentencia_simple : sent_abierta $$5 sent_correcta

  36  $$6 :

  37  sentencia_simple : sent_abierta $$6 sentencia_comp

  38  $$7 :

  39  sent_abierta : PRINT $$7 '(' cadena ')'
  40               | llamada_funcion

  41  $$8 :

  42  sent_abierta : RETURN $$8 expresion
  43               | asignacion

  44  sent_correcta : sent_abierta ';'
  45                | error ';'

  46  sentencia_comp : sentencia_if
  47                 | sentencia_loop

  48  $$9 :

  49  sentencia_if : IF '(' cond ')' $$9 THEN bloque_IF
  50               | sentencia_if_error

  51  $$10 :

  52  sentencia_if_error : IF THEN $$10 bloque_IF

  53  $$11 :

  54  sentencia_if_error : IF cond ')' $$11 THEN bloque_IF

  55  $$12 :

  56  sentencia_if_error : IF '(' cond $$12 THEN bloque_IF

  57  $$13 :

  58  sentencia_if_error : IF cond $$13 THEN bloque_IF

  59  $$14 :

  60  sentencia_if_error : IF '(' cond ')' $$14 bloque_IF

  61  $$15 :

  62  sentencia_if_error : IF error $$15 bloque_IF

  63  $$16 :

  64  sentencia_loop : LOOP $$16 bloque_loop

  65  bloque_loop : bloque_sent UNTIL cond
  66              | loop_error

  67  loop_error : bloque_sent cond
  68             | bloque_sent UNTIL error
  69             | bloque_sent error

  70  llamada_funcion : ID '(' lista_parametros ')'
  71                  | ID '(' ')'

  72  lista_var : ID ',' lista_var
  73            | ID

  74  bloque_IF : bloque_sent
  75            | bloque_sent ELSE bloque_sent
  76            | ID bloque_IF

  77  cond : expresion comparador expresion

  78  comparador : '<'
  79             | '>'
  80             | MEN_IG
  81             | MAY_IG
  82             | IGUAL
  83             | DIST

  84  parametros : tipo ID
  85             | tipo ID ',' parametros

  86  lista_parametros : parametro ',' lista_parametros
  87                   | parametro

  88  parametro : expresion

  89  asignacion : ID '=' expresion

  90  expresion : expresion '+' termino
  91            | expresion '-' termino
  92            | termino

  93  termino : termino '*' factor
  94          | termino '/' factor
  95          | factor

  96  factor : ID
  97         | CTE
  98         | llamada_funcion

  99  tipo : uint

state 0
	$accept : . programa $end  (0)

	BEGIN  shift 1
	.  error

	programa  goto 2


state 1
	programa : BEGIN . lista_declaraciones_prog END  (1)

	error  shift 3
	ID  shift 4
	IF  shift 5
	PRINT  shift 6
	RETURN  shift 7
	FUNCTION  shift 8
	BEGIN  shift 9
	LOOP  shift 10
	uint  shift 11
	.  error

	lista_declaraciones_prog  goto 12
	lista_declaraciones  goto 13
	lista_sent_declar  goto 14
	declaracion  goto 15
	sentencia_declar_funcion  goto 16
	bloque_sent  goto 17
	bloque_funcion  goto 18
	sentencia_ejec  goto 19
	sentencia_declarativa_tipo  goto 20
	tipo  goto 21
	sent_correcta  goto 22
	sentencia_simple  goto 23
	sentencia_comp  goto 24
	sent_abierta  goto 25
	llamada_funcion  goto 26
	asignacion  goto 27
	sentencia_if  goto 28
	sentencia_loop  goto 29
	sentencia_if_error  goto 30


state 2
	$accept : programa . $end  (0)

	$end  accept


state 3
	sent_correcta : error . ';'  (45)

	';'  shift 31
	.  error


state 4
	llamada_funcion : ID . '(' lista_parametros ')'  (70)
	llamada_funcion : ID . '(' ')'  (71)
	asignacion : ID . '=' expresion  (89)

	'('  shift 32
	'='  shift 33
	.  error


state 5
	sentencia_if : IF . '(' cond ')' $$9 THEN bloque_IF  (49)
	sentencia_if_error : IF . THEN $$10 bloque_IF  (52)
	sentencia_if_error : IF . cond ')' $$11 THEN bloque_IF  (54)
	sentencia_if_error : IF . '(' cond $$12 THEN bloque_IF  (56)
	sentencia_if_error : IF . cond $$13 THEN bloque_IF  (58)
	sentencia_if_error : IF . '(' cond ')' $$14 bloque_IF  (60)
	sentencia_if_error : IF . error $$15 bloque_IF  (62)

	error  shift 34
	ID  shift 35
	CTE  shift 36
	THEN  shift 37
	'('  shift 38
	.  error

	llamada_funcion  goto 39
	expresion  goto 40
	cond  goto 41
	termino  goto 42
	factor  goto 43


state 6
	sent_abierta : PRINT . $$7 '(' cadena ')'  (39)
	$$7 : .  (38)

	.  reduce 38

	$$7  goto 44


state 7
	sent_abierta : RETURN . $$8 expresion  (42)
	$$8 : .  (41)

	.  reduce 41

	$$8  goto 45


state 8
	sentencia_declar_funcion : FUNCTION . ID '(' parametros ')' bloque_funcion  (8)
	sentencia_declar_funcion : FUNCTION . ID '(' ')' bloque_funcion  (9)
	sentencia_declar_funcion : FUNCTION . error ')'  (10)
	sentencia_declar_funcion : FUNCTION . error bloque_funcion  (11)

	error  shift 46
	ID  shift 47
	.  error


state 9
	bloque_funcion : BEGIN . lista_sentencias END  (14)
	bloque_funcion : BEGIN . lista_sentencias $$1 bloque_funcion  (16)
	bloque_funcion : BEGIN . lista_sentencias $$2 sentencia_declar_funcion  (18)

	error  shift 3
	ID  shift 4
	IF  shift 5
	PRINT  shift 6
	RETURN  shift 7
	LOOP  shift 10
	uint  shift 11
	.  error

	lista_sent_declar  goto 48
	sentencia_ejec  goto 49
	lista_sentencias  goto 50
	lista_sent_ejec  goto 51
	sentencia_declarativa_tipo  goto 20
	tipo  goto 21
	sent_correcta  goto 22
	sentencia_simple  goto 23
	sentencia_comp  goto 24
	sent_abierta  goto 25
	llamada_funcion  goto 26
	asignacion  goto 27
	sentencia_if  goto 28
	sentencia_loop  goto 29
	sentencia_if_error  goto 30


state 10
	sentencia_loop : LOOP . $$16 bloque_loop  (64)
	$$16 : .  (63)

	.  reduce 63

	$$16  goto 52


state 11
	tipo : uint .  (99)

	.  reduce 99


state 12
	programa : BEGIN lista_declaraciones_prog . END  (1)

	END  shift 53
	.  error


state 13
	lista_declaraciones_prog : lista_declaraciones .  (2)

	.  reduce 2


state 14
	lista_declaraciones_prog : lista_sent_declar . lista_declaraciones  (3)

	error  shift 3
	ID  shift 4
	IF  shift 5
	PRINT  shift 6
	RETURN  shift 7
	FUNCTION  shift 8
	BEGIN  shift 9
	LOOP  shift 10
	.  error

	lista_declaraciones  goto 54
	declaracion  goto 15
	sentencia_declar_funcion  goto 16
	bloque_sent  goto 17
	bloque_funcion  goto 18
	sentencia_ejec  goto 19
	sent_correcta  goto 22
	sentencia_simple  goto 23
	sentencia_comp  goto 24
	sent_abierta  goto 25
	llamada_funcion  goto 26
	asignacion  goto 27
	sentencia_if  goto 28
	sentencia_loop  goto 29
	sentencia_if_error  goto 30


state 15
	lista_declaraciones : declaracion .  (4)
	lista_declaraciones : declaracion . lista_declaraciones  (5)

	error  shift 3
	ID  shift 4
	IF  shift 5
	PRINT  shift 6
	RETURN  shift 7
	FUNCTION  shift 8
	BEGIN  shift 9
	LOOP  shift 10
	END  reduce 4

	lista_declaraciones  goto 55
	declaracion  goto 15
	sentencia_declar_funcion  goto 16
	bloque_sent  goto 17
	bloque_funcion  goto 18
	sentencia_ejec  goto 19
	sent_correcta  goto 22
	sentencia_simple  goto 23
	sentencia_comp  goto 24
	sent_abierta  goto 25
	llamada_funcion  goto 26
	asignacion  goto 27
	sentencia_if  goto 28
	sentencia_loop  goto 29
	sentencia_if_error  goto 30


state 16
	declaracion : sentencia_declar_funcion .  (6)

	.  reduce 6


state 17
	declaracion : bloque_sent .  (7)

	.  reduce 7


state 18
	bloque_sent : bloque_funcion .  (13)

	.  reduce 13


state 19
	bloque_sent : sentencia_ejec .  (12)

	.  reduce 12


state 20
	lista_sent_declar : sentencia_declarativa_tipo . lista_sent_declar  (21)
	lista_sent_declar : sentencia_declarativa_tipo .  (22)

	uint  shift 11
	error  reduce 22
	ID  reduce 22
	IF  reduce 22
	PRINT  reduce 22
	RETURN  reduce 22
	FUNCTION  reduce 22
	BEGIN  reduce 22
	LOOP  reduce 22

	lista_sent_declar  goto 56
	sentencia_declarativa_tipo  goto 20
	tipo  goto 21


state 21
	sentencia_declarativa_tipo : tipo . lista_var ';'  (23)
	sentencia_declarativa_tipo : tipo . error ';'  (24)
	sentencia_declarativa_tipo : tipo . lista_var $$3 sent_correcta  (26)
	sentencia_declarativa_tipo : tipo . lista_var $$4 sentencia_declarativa_tipo  (28)

	error  shift 57
	ID  shift 58
	.  error

	lista_var  goto 59


state 22
	sentencia_simple : sent_correcta .  (33)

	.  reduce 33


state 23
	sentencia_ejec : sentencia_simple .  (31)

	.  reduce 31


state 24
	sentencia_ejec : sentencia_comp .  (32)

	.  reduce 32


state 25
	sentencia_simple : sent_abierta . $$5 sent_correcta  (35)
	sentencia_simple : sent_abierta . $$6 sentencia_comp  (37)
	sent_correcta : sent_abierta . ';'  (44)
	$$5 : .  (34)
	$$6 : .  (36)

	';'  shift 60
	error  reduce 34
	ID  reduce 34
	IF  reduce 36
	PRINT  reduce 34
	RETURN  reduce 34
	LOOP  reduce 36

	$$5  goto 61
	$$6  goto 62


state 26
	sent_abierta : llamada_funcion .  (40)

	.  reduce 40


state 27
	sent_abierta : asignacion .  (43)

	.  reduce 43


state 28
	sentencia_comp : sentencia_if .  (46)

	.  reduce 46


state 29
	sentencia_comp : sentencia_loop .  (47)

	.  reduce 47


state 30
	sentencia_if : sentencia_if_error .  (50)

	.  reduce 50


state 31
	sent_correcta : error ';' .  (45)

	.  reduce 45


state 32
	llamada_funcion : ID '(' . lista_parametros ')'  (70)
	llamada_funcion : ID '(' . ')'  (71)

	ID  shift 35
	CTE  shift 36
	')'  shift 63
	.  error

	llamada_funcion  goto 39
	expresion  goto 64
	lista_parametros  goto 65
	parametro  goto 66
	termino  goto 42
	factor  goto 43


state 33
	asignacion : ID '=' . expresion  (89)

	ID  shift 35
	CTE  shift 36
	.  error

	llamada_funcion  goto 39
	expresion  goto 67
	termino  goto 42
	factor  goto 43


state 34
	sentencia_if_error : IF error . $$15 bloque_IF  (62)
	$$15 : .  (61)

	.  reduce 61

	$$15  goto 68


state 35
	llamada_funcion : ID . '(' lista_parametros ')'  (70)
	llamada_funcion : ID . '(' ')'  (71)
	factor : ID .  (96)

	'('  shift 32
	error  reduce 96
	ID  reduce 96
	CTE  reduce 96
	IF  reduce 96
	THEN  reduce 96
	ELSE  reduce 96
	PRINT  reduce 96
	RETURN  reduce 96
	FUNCTION  reduce 96
	BEGIN  reduce 96
	END  reduce 96
	LOOP  reduce 96
	UNTIL  reduce 96
	MAY_IG  reduce 96
	MEN_IG  reduce 96
	DIST  reduce 96
	IGUAL  reduce 96
	')'  reduce 96
	';'  reduce 96
	','  reduce 96
	'<'  reduce 96
	'>'  reduce 96
	'+'  reduce 96
	'-'  reduce 96
	'*'  reduce 96
	'/'  reduce 96


state 36
	factor : CTE .  (97)

	.  reduce 97


state 37
	sentencia_if_error : IF THEN . $$10 bloque_IF  (52)
	$$10 : .  (51)

	.  reduce 51

	$$10  goto 69


state 38
	sentencia_if : IF '(' . cond ')' $$9 THEN bloque_IF  (49)
	sentencia_if_error : IF '(' . cond $$12 THEN bloque_IF  (56)
	sentencia_if_error : IF '(' . cond ')' $$14 bloque_IF  (60)

	ID  shift 35
	CTE  shift 36
	.  error

	llamada_funcion  goto 39
	expresion  goto 40
	cond  goto 70
	termino  goto 42
	factor  goto 43


state 39
	factor : llamada_funcion .  (98)

	.  reduce 98


state 40
	cond : expresion . comparador expresion  (77)
	expresion : expresion . '+' termino  (90)
	expresion : expresion . '-' termino  (91)

	MAY_IG  shift 71
	MEN_IG  shift 72
	DIST  shift 73
	IGUAL  shift 74
	'<'  shift 75
	'>'  shift 76
	'+'  shift 77
	'-'  shift 78
	.  error

	comparador  goto 79


state 41
	sentencia_if_error : IF cond . ')' $$11 THEN bloque_IF  (54)
	sentencia_if_error : IF cond . $$13 THEN bloque_IF  (58)
	$$13 : .  (57)

	')'  shift 80
	THEN  reduce 57

	$$13  goto 81


state 42
	expresion : termino .  (92)
	termino : termino . '*' factor  (93)
	termino : termino . '/' factor  (94)

	'*'  shift 82
	'/'  shift 83
	error  reduce 92
	ID  reduce 92
	CTE  reduce 92
	IF  reduce 92
	THEN  reduce 92
	ELSE  reduce 92
	PRINT  reduce 92
	RETURN  reduce 92
	FUNCTION  reduce 92
	BEGIN  reduce 92
	END  reduce 92
	LOOP  reduce 92
	UNTIL  reduce 92
	MAY_IG  reduce 92
	MEN_IG  reduce 92
	DIST  reduce 92
	IGUAL  reduce 92
	')'  reduce 92
	';'  reduce 92
	','  reduce 92
	'<'  reduce 92
	'>'  reduce 92
	'+'  reduce 92
	'-'  reduce 92


state 43
	termino : factor .  (95)

	.  reduce 95


state 44
	sent_abierta : PRINT $$7 . '(' cadena ')'  (39)

	'('  shift 84
	.  error


state 45
	sent_abierta : RETURN $$8 . expresion  (42)

	ID  shift 35
	CTE  shift 36
	.  error

	llamada_funcion  goto 39
	expresion  goto 85
	termino  goto 42
	factor  goto 43


state 46
	sentencia_declar_funcion : FUNCTION error . ')'  (10)
	sentencia_declar_funcion : FUNCTION error . bloque_funcion  (11)

	BEGIN  shift 9
	')'  shift 86
	.  error

	bloque_funcion  goto 87


state 47
	sentencia_declar_funcion : FUNCTION ID . '(' parametros ')' bloque_funcion  (8)
	sentencia_declar_funcion : FUNCTION ID . '(' ')' bloque_funcion  (9)

	'('  shift 88
	.  error


state 48
	lista_sentencias : lista_sent_declar . lista_sent_ejec  (20)

	error  shift 3
	ID  shift 4
	IF  shift 5
	PRINT  shift 6
	RETURN  shift 7
	LOOP  shift 10
	.  error

	sentencia_ejec  goto 49
	lista_sent_ejec  goto 89
	sent_correcta  goto 22
	sentencia_simple  goto 23
	sentencia_comp  goto 24
	sent_abierta  goto 25
	llamada_funcion  goto 26
	asignacion  goto 27
	sentencia_if  goto 28
	sentencia_loop  goto 29
	sentencia_if_error  goto 30


state 49
	lista_sent_ejec : sentencia_ejec . lista_sent_ejec  (29)
	lista_sent_ejec : sentencia_ejec .  (30)

	error  shift 3
	ID  shift 4
	IF  shift 5
	PRINT  shift 6
	RETURN  shift 7
	LOOP  shift 10
	FUNCTION  reduce 30
	BEGIN  reduce 30
	END  reduce 30

	sentencia_ejec  goto 49
	lista_sent_ejec  goto 90
	sent_correcta  goto 22
	sentencia_simple  goto 23
	sentencia_comp  goto 24
	sent_abierta  goto 25
	llamada_funcion  goto 26
	asignacion  goto 27
	sentencia_if  goto 28
	sentencia_loop  goto 29
	sentencia_if_error  goto 30


state 50
	bloque_funcion : BEGIN lista_sentencias . END  (14)
	bloque_funcion : BEGIN lista_sentencias . $$1 bloque_funcion  (16)
	bloque_funcion : BEGIN lista_sentencias . $$2 sentencia_declar_funcion  (18)
	$$1 : .  (15)
	$$2 : .  (17)

	END  shift 91
	FUNCTION  reduce 17
	BEGIN  reduce 15

	$$1  goto 92
	$$2  goto 93


state 51
	lista_sentencias : lista_sent_ejec .  (19)

	.  reduce 19


state 52
	sentencia_loop : LOOP $$16 . bloque_loop  (64)

	error  shift 3
	ID  shift 4
	IF  shift 5
	PRINT  shift 6
	RETURN  shift 7
	BEGIN  shift 9
	LOOP  shift 10
	.  error

	bloque_sent  goto 94
	bloque_funcion  goto 18
	sentencia_ejec  goto 19
	sent_correcta  goto 22
	sentencia_simple  goto 23
	sentencia_comp  goto 24
	sent_abierta  goto 25
	llamada_funcion  goto 26
	asignacion  goto 27
	sentencia_if  goto 28
	sentencia_loop  goto 29
	sentencia_if_error  goto 30
	bloque_loop  goto 95
	loop_error  goto 96


state 53
	programa : BEGIN lista_declaraciones_prog END .  (1)

	.  reduce 1


state 54
	lista_declaraciones_prog : lista_sent_declar lista_declaraciones .  (3)

	.  reduce 3


state 55
	lista_declaraciones : declaracion lista_declaraciones .  (5)

	.  reduce 5


state 56
	lista_sent_declar : sentencia_declarativa_tipo lista_sent_declar .  (21)

	.  reduce 21


state 57
	sentencia_declarativa_tipo : tipo error . ';'  (24)

	';'  shift 97
	.  error


state 58
	lista_var : ID . ',' lista_var  (72)
	lista_var : ID .  (73)

	','  shift 98
	error  reduce 73
	ID  reduce 73
	PRINT  reduce 73
	RETURN  reduce 73
	uint  reduce 73
	';'  reduce 73


state 59
	sentencia_declarativa_tipo : tipo lista_var . ';'  (23)
	sentencia_declarativa_tipo : tipo lista_var . $$3 sent_correcta  (26)
	sentencia_declarativa_tipo : tipo lista_var . $$4 sentencia_declarativa_tipo  (28)
	$$3 : .  (25)
	$$4 : .  (27)

	';'  shift 99
	error  reduce 25
	ID  reduce 25
	PRINT  reduce 25
	RETURN  reduce 25
	uint  reduce 27

	$$3  goto 100
	$$4  goto 101


state 60
	sent_correcta : sent_abierta ';' .  (44)

	.  reduce 44


state 61
	sentencia_simple : sent_abierta $$5 . sent_correcta  (35)

	error  shift 3
	ID  shift 4
	PRINT  shift 6
	RETURN  shift 7
	.  error

	sent_correcta  goto 102
	sent_abierta  goto 103
	llamada_funcion  goto 26
	asignacion  goto 27


state 62
	sentencia_simple : sent_abierta $$6 . sentencia_comp  (37)

	IF  shift 5
	LOOP  shift 10
	.  error

	sentencia_comp  goto 104
	sentencia_if  goto 28
	sentencia_loop  goto 29
	sentencia_if_error  goto 30


state 63
	llamada_funcion : ID '(' ')' .  (71)

	.  reduce 71


state 64
	parametro : expresion .  (88)
	expresion : expresion . '+' termino  (90)
	expresion : expresion . '-' termino  (91)

	'+'  shift 77
	'-'  shift 78
	')'  reduce 88
	','  reduce 88


state 65
	llamada_funcion : ID '(' lista_parametros . ')'  (70)

	')'  shift 105
	.  error


state 66
	lista_parametros : parametro . ',' lista_parametros  (86)
	lista_parametros : parametro .  (87)

	','  shift 106
	')'  reduce 87


state 67
	asignacion : ID '=' expresion .  (89)
	expresion : expresion . '+' termino  (90)
	expresion : expresion . '-' termino  (91)

	'+'  shift 77
	'-'  shift 78
	error  reduce 89
	ID  reduce 89
	IF  reduce 89
	PRINT  reduce 89
	RETURN  reduce 89
	LOOP  reduce 89
	';'  reduce 89


state 68
	sentencia_if_error : IF error $$15 . bloque_IF  (62)

	error  shift 3
	ID  shift 107
	IF  shift 5
	PRINT  shift 6
	RETURN  shift 7
	BEGIN  shift 9
	LOOP  shift 10
	.  error

	bloque_sent  goto 108
	bloque_funcion  goto 18
	sentencia_ejec  goto 19
	sent_correcta  goto 22
	sentencia_simple  goto 23
	sentencia_comp  goto 24
	sent_abierta  goto 25
	llamada_funcion  goto 26
	asignacion  goto 27
	sentencia_if  goto 28
	sentencia_loop  goto 29
	bloque_IF  goto 109
	sentencia_if_error  goto 30


state 69
	sentencia_if_error : IF THEN $$10 . bloque_IF  (52)

	error  shift 3
	ID  shift 107
	IF  shift 5
	PRINT  shift 6
	RETURN  shift 7
	BEGIN  shift 9
	LOOP  shift 10
	.  error

	bloque_sent  goto 108
	bloque_funcion  goto 18
	sentencia_ejec  goto 19
	sent_correcta  goto 22
	sentencia_simple  goto 23
	sentencia_comp  goto 24
	sent_abierta  goto 25
	llamada_funcion  goto 26
	asignacion  goto 27
	sentencia_if  goto 28
	sentencia_loop  goto 29
	bloque_IF  goto 110
	sentencia_if_error  goto 30


state 70
	sentencia_if : IF '(' cond . ')' $$9 THEN bloque_IF  (49)
	sentencia_if_error : IF '(' cond . $$12 THEN bloque_IF  (56)
	sentencia_if_error : IF '(' cond . ')' $$14 bloque_IF  (60)
	$$12 : .  (55)

	')'  shift 111
	THEN  reduce 55

	$$12  goto 112


state 71
	comparador : MAY_IG .  (81)

	.  reduce 81


state 72
	comparador : MEN_IG .  (80)

	.  reduce 80


state 73
	comparador : DIST .  (83)

	.  reduce 83


state 74
	comparador : IGUAL .  (82)

	.  reduce 82


state 75
	comparador : '<' .  (78)

	.  reduce 78


state 76
	comparador : '>' .  (79)

	.  reduce 79


state 77
	expresion : expresion '+' . termino  (90)

	ID  shift 35
	CTE  shift 36
	.  error

	llamada_funcion  goto 39
	termino  goto 113
	factor  goto 43


state 78
	expresion : expresion '-' . termino  (91)

	ID  shift 35
	CTE  shift 36
	.  error

	llamada_funcion  goto 39
	termino  goto 114
	factor  goto 43


state 79
	cond : expresion comparador . expresion  (77)

	ID  shift 35
	CTE  shift 36
	.  error

	llamada_funcion  goto 39
	expresion  goto 115
	termino  goto 42
	factor  goto 43


state 80
	sentencia_if_error : IF cond ')' . $$11 THEN bloque_IF  (54)
	$$11 : .  (53)

	.  reduce 53

	$$11  goto 116


state 81
	sentencia_if_error : IF cond $$13 . THEN bloque_IF  (58)

	THEN  shift 117
	.  error

